--- a/main.css
+++ b/main.css
@@ -23,34 +23,45 @@ article, aside, details, figcaption, figure, footer, header, main, nav, section,
 /************************* STICKY FOOTER  *************************/
 
 body {
-    background-color: rgb(10, 75, 71);
+    /* background-color: rgb(10, 75, 71); */
     font-family: 'Montserrat', sans-serif;
     color: whitesmoke;
+    background-color: whitesmoke;
+}
+
+header {
+    background-color: rgb(10, 75, 71);
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 30px 0;
+    margin-bottom: 3px;
 }
 
 h1 {
-    padding: 30px; 
+    padding: 0 30px;
+    font-size: 2.1rem;
 }
 
 h1, h2, h3 {
     font-family: 'Kaisei HarunoUmi', serif;
 }
 
-h1 {
-    font-size: 3rem;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 0 40px;
+    padding: 0 30px 4px;
     text-align: right;
 }
 
 li {
     display: inline;
-    padding: 0 40px;
+    padding: 0 10px;
     font-size: 1.1rem;
+}
+
+main {
+    background-color: rgb(10, 75, 71);
 }
 
 h2 {
