--- a/main.css
+++ b/main.css
@@ -62,10 +62,20 @@ li {
 
 main {
     background-color: rgb(10, 75, 71);
+    padding: 30px 0;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
+    padding-bottom: 10px;
+}
+
+p {
+    font-size: 1rem;
+}
+
+h2, p {
+    padding-left: 30px; 
 }
 
 footer {
