--- a/main.css
+++ b/main.css
@@ -67,15 +67,12 @@ main {
 
 h2 {
     font-size: 1.8rem;
-    padding-bottom: 10px;
+    padding: 0 10px 10px;
 }
 
 p {
     font-size: 1rem;
-}
-
-h2, p {
-    padding-left: 30px; 
+    padding: 0 10px;
 }
 
 footer {
@@ -92,6 +89,16 @@ h3 {
 
 /************************************* START 930PX MEDIA QUERY *************************************/
 @media (min-width: 930px) {
+
+    h2 {
+        font-size: 1.8rem;
+        padding: 0 30px 10px;
+    }
+
+    p {
+        font-size: 1rem;
+        padding: 0 30px;
+    }
 
     h3 {
         font-size: 1.1rem;
